--- a/packages/bulma/sass/elements/button.sass
+++ b/packages/bulma/sass/elements/button.sass
@@ -112,10 +112,8 @@ $-css-vars-map: ('button-color': $button-color, 'button-background-color': $butt
     font-family: var(--button-family)
   font-size: var(--button-font-size)
   justify-content: center
-  padding-bottom: var(--button-padding-vertical)
-  padding-left: var(--button-padding-horizontal)
-  padding-right: var(--button-padding-horizontal)
-  padding-top: var(--button-padding-vertical)
+  padding-block: var(--button-padding-vertical)
+  padding-inline: var(--button-padding-horizontal)
   text-align: center
   white-space: nowrap
   strong
@@ -324,8 +322,7 @@ $-css-vars-map: ('button-color': $button-color, 'button-background-color': $butt
     pointer-events: none
   &.is-rounded
     border-radius: var(--radius-rounded)
-    padding-left: calc(var(--button-padding-horizontal) + 0.25em)
-    padding-right: calc(var(--button-padding-horizontal) + 0.25em)
+    padding-inline: calc(var(--button-padding-horizontal) + 0.25em)
 
 .buttons
   align-items: center
@@ -353,11 +350,9 @@ $-css-vars-map: ('button-color': $button-color, 'button-background-color': $butt
   &.has-addons
     .button
       &:not(:first-child)
-        border-bottom-left-radius: 0
-        border-top-left-radius: 0
+        +utilities.ltr-border-x("radius", 0, false)
       &:not(:last-child)
-        border-bottom-right-radius: 0
-        border-top-right-radius: 0
+        +utilities.ltr-border-x("radius", 0)
         +utilities.ltr-property("margin", -1px)
       &:last-child
         +utilities.ltr-property("margin", 0)
@@ -379,14 +374,12 @@ $-css-vars-map: ('button-color': $button-color, 'button-background-color': $butt
     justify-content: center
     &:not(.has-addons)
       .button:not(.is-fullwidth)
-        margin-left: 0.25rem
-        margin-right: 0.25rem
+        margin-inline: 0.25rem
   &.is-right
     justify-content: flex-end
     &:not(.has-addons)
       .button:not(.is-fullwidth)
-        margin-left: 0.25rem
-        margin-right: 0.25rem
+        margin-inline: 0.25rem
 
 @each $name, $sizes in $button-responsive-sizes
   +utilities.breakpoint($name)
