--- a/packages/bulma/sass/elements/container.sass
+++ b/packages/bulma/sass/elements/container.sass
@@ -13,8 +13,7 @@ $container-max-width: vars.$fullhd !default
   width: auto
   &.is-fluid
     max-width: none !important
-    padding-left: vars.$gap
-    padding-right: vars.$gap
+    padding-inline: vars.$gap
     width: 100%
   +utilities.desktop
     max-width: vars.$desktop - $container-offset
