--- a/packages/bulma/sass/elements/content.sass
+++ b/packages/bulma/sass/elements/content.sass
@@ -122,8 +122,7 @@ $-css-vars-map: ("content-heading-color": $content-heading-color, "content-headi
   dd
     +utilities.ltr-property("margin", 2em, false)
   figure
-    margin-left: 2em
-    margin-right: 2em
+    margin-inline: 2em
     text-align: center
     &:not(:first-child)
       margin-top: 2em
