--- a/packages/bulma/sass/grid/tiles.sass
+++ b/packages/bulma/sass/grid/tiles.sass
@@ -20,8 +20,7 @@ $-css-vars-map: ('tile-spacing': $tile-spacing)
   min-height: min-content
   // Modifiers
   &.is-ancestor
-    margin-left: calc(-1 * var(--tile-spacing))
-    margin-right: calc(-1 * var(--tile-spacing))
+    margin-inline: calc(-1 * var(--tile-spacing))
     margin-top: calc(-1 * var(--tile-spacing))
     &:last-child
       margin-bottom: calc(-1 * var(--tile-spacing))
