--- a/packages/bulma/sass/components/modal.sass
+++ b/packages/bulma/sass/components/modal.sass
@@ -94,7 +94,7 @@ $-css-vars-map: ("modal-z": $modal-z, "modal-background-background-color": $moda
   background: none
   height: var(--modal-close-dimensions)
   position: fixed
-  +utilities.ltr-position(var(--modal-close-right))
+  +utilities.ltr-property("inset", var(--modal-close-right))
   top: var(--modal-close-top)
   width: var(--modal-close-dimensions)
 
@@ -117,8 +117,7 @@ $-css-vars-map: ("modal-z": $modal-z, "modal-background-background-color": $moda
 
 .modal-card-head
   border-bottom: var(--modal-card-head-border-bottom)
-  border-top-left-radius: var(--modal-card-head-radius)
-  border-top-right-radius: var(--modal-card-head-radius)
+  +utilities.ltr-border-y("radius", var(--modal-card-head-radius))
 
 .modal-card-title
   color: var(--modal-card-title-color)
@@ -128,8 +127,7 @@ $-css-vars-map: ("modal-z": $modal-z, "modal-background-background-color": $moda
   line-height: var(--modal-card-title-line-height)
 
 .modal-card-foot
-  border-bottom-left-radius: var(--modal-card-foot-radius)
-  border-bottom-right-radius: var(--modal-card-foot-radius)
+  +utilities.ltr-border-y("radius", var(--modal-card-foot-radius), false)
   border-top: var(--modal-card-foot-border-top)
   .button
     &:not(:last-child)
