--- a/packages/bulma/sass/components/panel.sass
+++ b/packages/bulma/sass/components/panel.sass
@@ -130,13 +130,14 @@ $-css-vars-map: ("panel-font-size": $panel-font-size, "panel-margin": $panel-mar
   &.is-wrapped
     flex-wrap: wrap
   &.is-active
-    border-left-color: var(--panel-block-active-border-left-color)
+    +utilities.ltr-border-x("color", var(--panel-block-active-border-left-color))
     color: var(--panel-block-active-color)
     .panel-icon
       color: var(--panel-block-active-icon-color)
+  &:first-child
+    +utilities.ltr-border-y("radius", var(--panel-radius))
   &:last-child
-    border-bottom-left-radius: var(--panel-radius)
-    border-bottom-right-radius: var(--panel-radius)
+    +utilities.ltr-border-y("radius", var(--panel-radius), false)
 
 a.panel-block,
 label.panel-block
