--- a/packages/bulma/sass/utilities/controls.sass
+++ b/packages/bulma/sass/utilities/controls.sass
@@ -9,10 +9,8 @@
   height: var(--control-height)
   justify-content: flex-start
   line-height: var(--control-line-height)
-  padding-bottom: var(--control-padding-vertical)
-  padding-left: var(--control-padding-horizontal)
-  padding-right: var(--control-padding-horizontal)
-  padding-top: var(--control-padding-vertical)
+  padding-block: var(--control-padding-vertical)
+  padding-inline: var(--control-padding-horizontal)
   position: relative
   vertical-align: top
   // States
