feature(Buefy): ✨  CSS logical properties for better RTL support

--- a/packages/buefy/scss/components/clockpicker.scss
+++ b/packages/buefy/scss/components/clockpicker.scss
@@ -107,8 +107,7 @@ $-css-vars-map: (
     }
 
     .card-header {
-        border-top-left-radius: var(--clockpicker-card-radius);
-        border-top-right-radius: var(--clockpicker-card-radius);
+        @include bulma-utilities.ltr-border-y("radius", var(--clockpicker-card-radius));
     }
 
     .card-content {
