--- a/packages/buefy/scss/components/tabs.scss
+++ b/packages/buefy/scss/components/tabs.scss
@@ -133,7 +133,7 @@ $-css-vars-map: (
                     a {
                         border-right-color: var(--tabs-border-bottom-color) !important;
                         border-bottom-color: transparent !important;
-                        border-radius: var(--tabs-boxed-link-radius) 0 0 var(--tabs-boxed-link-radius);
+                        @include bulma-utilities.ltr-border-x("radius", var(--tabs-boxed-link-radius), false);
                     }
 
                     &.is-active {
@@ -151,12 +151,12 @@ $-css-vars-map: (
                     }
                     &:first-child {
                         a {
-                            border-radius: var(--tabs-toggle-link-radius) var(--tabs-toggle-link-radius) 0 0;
+                            @include bulma-utilities.ltr-border-y("radius", var(--tabs-toggle-link-radius));
                         }
                     }
                     &:last-child {
                         a {
-                            border-radius: 0 0 var(--tabs-toggle-link-radius) var(--tabs-toggle-link-radius);
+                            @include bulma-utilities.ltr-border-y("radius", var(--tabs-toggle-link-radius), false);
                         }
                     }
                 }
@@ -194,7 +194,7 @@ $-css-vars-map: (
                             border-right-color: transparent !important;
                             border-bottom-color: transparent !important;
                             border-left-color: var(--tabs-border-bottom-color) !important;
-                            border-radius: 0 var(--tabs-boxed-link-radius) var(--tabs-boxed-link-radius) 0;
+                            @include bulma-utilities.ltr-border-x("radius", var(--tabs-boxed-link-radius));
                         }
 
                         &.is-active {
