feature(Bulma): ✨  better nomenclature for css modifiers is-right -> is-end

--- a/packages/bulma/sass/components/breadcrumb.sass
+++ b/packages/bulma/sass/components/breadcrumb.sass
@@ -69,6 +69,10 @@ $-css-vars-map: ("breadcrumb-font-size": $breadcrumb-font-size, "breadcrumb-item
   &.is-right
     ol,
     ul
+      justify-content: right
+  &.is-end
+    ol,
+    ul
       justify-content: flex-end
   // Sizes
   +utilities.control-sizes(breadcrumb-font-size)
