--- a/packages/bulma/sass/components/navbar.sass
+++ b/packages/bulma/sass/components/navbar.sass
@@ -448,6 +448,9 @@ a.navbar-item,
     &.is-right
       left: auto
       right: 0
+    &.is-end
+      inset-inline-start: auto
+      inset-inline-end: 0
   .navbar-divider
     display: block
   .navbar > .container,
