--- a/packages/bulma/sass/components/pagination.sass
+++ b/packages/bulma/sass/components/pagination.sass
@@ -185,5 +185,13 @@ $-css-vars-map: ("pagination-color": $pagination-color, "pagination-border-color
       .pagination-next
         order: 2
       .pagination-list
+        justify-content: right
+        order: 3
+    &.is-end
+      .pagination-previous
+        order: 1
+      .pagination-next
+        order: 2
+      .pagination-list
         justify-content: flex-end
         order: 3
