--- a/packages/buefy/scss/components/taginput.scss
+++ b/packages/buefy/scss/components/taginput.scss
@@ -22,10 +22,9 @@ $-css-vars-map: (
             align-items: center;
             justify-content: flex-start;
             padding-top: calc(0.275em - 1px);
-            padding-right: 0;
             padding-bottom: 0;
-            padding-left: 0;
             cursor: text;
+            padding-inline: 0;
         }
         &:not(.is-focusable) {
             height: auto;
@@ -57,11 +56,10 @@ $-css-vars-map: (
             input {
                 min-width: 8em;
                 height: var(--taginput-height);
-                padding-top: 0;
-                padding-bottom: 0;
                 border: none;
                 margin-bottom: calc(0.275em - 1px);
                 box-shadow: none;
+                padding-block: 0;
                 &:focus {
                     box-shadow: none !important;
                 }
