--- a/packages/buefy/scss/components/numberinput.scss
+++ b/packages/buefy/scss/components/numberinput.scss
@@ -26,8 +26,7 @@
     }
     .button {
         &.is-rounded {
-            padding-right: 1em;
-            padding-left: 1em;
+            padding-inline: 1em;
         }
     }
 }
